--- a/"1 - Le Basi di Tensorflow"/how_much_is_my_app_worth.ipynb
+++ b/"1 - Le Basi di Tensorflow"/how_much_is_my_app_worth.ipynb
@@ -6,7 +6,7 @@
       "name": "how_much_is_my_app_worth.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOxas6Cfq5lHKO654lCUiev",
+      "authorship_tag": "ABX9TyPr05Gv0Yy9+MgwRsNt2yhf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1222,8 +1222,21 @@
         "colab_type": "text"
       },
       "source": [
-        "$ y = 3x + 1002.2$"
+        "$ y = 3x + 1000$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x0sRQN3evtBy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
