--- a/4 - Tensorflow Avanzato/model_export.ipynb
+++ b/4 - Tensorflow Avanzato/model_export.ipynb
@@ -5,12 +5,261 @@
     "colab": {
       "name": "Untitled49.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYegNjw0RrKPnAueXVKB94",
+      "authorship_tag": "ABX9TyPxlD0uNwzjRYBdjvwkKenR",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "b65e769c1d664c6990153a36c4fdaffb": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "state": {
+            "_view_name": "HBoxView",
+            "_dom_classes": [],
+            "_model_name": "HBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_a3c5e0074ae54808a1a4231a37cb546a",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_7039e85b4f2e41dcab26c80691968416",
+              "IPY_MODEL_99dc3c7bed4f4c74b29052488248ded7"
+            ]
+          }
+        },
+        "a3c5e0074ae54808a1a4231a37cb546a": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "7039e85b4f2e41dcab26c80691968416": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "state": {
+            "_view_name": "ProgressView",
+            "style": "IPY_MODEL_dc94ec901e364d48bfc46e7c49ae1844",
+            "_dom_classes": [],
+            "description": "Dl Completed...: 100%",
+            "_model_name": "FloatProgressModel",
+            "bar_style": "success",
+            "max": 4,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 4,
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "orientation": "horizontal",
+            "min": 0,
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_3b22aa379c9f497fb531eff87c2c5f57"
+          }
+        },
+        "99dc3c7bed4f4c74b29052488248ded7": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "state": {
+            "_view_name": "HTMLView",
+            "style": "IPY_MODEL_d2a7bb549c134862b52a5e60cfc972e3",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "HTMLModel",
+            "placeholder": "​",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": " 4/4 [00:52&lt;00:00, 13.21s/ file]",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_96fa015470ed40e4b7ecd1588b8d705f"
+          }
+        },
+        "dc94ec901e364d48bfc46e7c49ae1844": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ProgressStyleModel",
+            "description_width": "initial",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "bar_color": null,
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "3b22aa379c9f497fb531eff87c2c5f57": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "d2a7bb549c134862b52a5e60cfc972e3": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "96fa015470ed40e4b7ecd1588b8d705f": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
     }
   },
   "cells": [
@@ -28,6 +277,273 @@
       "cell_type": "code",
       "metadata": {
         "id": "-yW2x9FqDrQb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_datasets as tfds\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from time import time"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zfoXiCU4D3AI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 227,
+          "referenced_widgets": [
+            "b65e769c1d664c6990153a36c4fdaffb",
+            "a3c5e0074ae54808a1a4231a37cb546a",
+            "7039e85b4f2e41dcab26c80691968416",
+            "99dc3c7bed4f4c74b29052488248ded7",
+            "dc94ec901e364d48bfc46e7c49ae1844",
+            "3b22aa379c9f497fb531eff87c2c5f57",
+            "d2a7bb549c134862b52a5e60cfc972e3",
+            "96fa015470ed40e4b7ecd1588b8d705f"
+          ]
+        },
+        "outputId": "a014e6f1-a2ea-45cb-93f2-384682aea276"
+      },
+      "source": [
+        "dataset = tfds.load('mnist', split='train', shuffle_files=True)\n",
+        "\n",
+        "def load_data(dataset, num_samples=None):\n",
+        "  images = []\n",
+        "  labels = []\n",
+        "\n",
+        "  for i, example in enumerate(tfds.as_numpy(dataset)):\n",
+        "\n",
+        "    if(num_samples!=None and i>=num_samples):\n",
+        "      break\n",
+        "\n",
+        "    images.append(example[\"image\"])\n",
+        "    labels.append(example[\"label\"])\n",
+        "\n",
+        "  images = np.array(images)\n",
+        "  labels = np.array(labels)\n",
+        "\n",
+        "  return images, labels\n",
+        "\n",
+        "images, labels = load_data(dataset)\n",
+        "num_classes = np.unique(labels).shape[0]\n",
+        "\n",
+        "X = images\n",
+        "y = tf.one_hot(labels, num_classes).numpy()\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:absl:Dataset mnist is hosted on GCS. It will automatically be downloaded to your\n",
+            "local data directory. If you'd instead prefer to read directly from our public\n",
+            "GCS bucket (recommended if you're running on GCP), you can instead set\n",
+            "data_dir=gs://tfds-data/datasets.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[1mDownloading and preparing dataset mnist/3.0.0 (download: 11.06 MiB, generated: Unknown size, total: 11.06 MiB) to /root/tensorflow_datasets/mnist/3.0.0...\u001b[0m\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b65e769c1d664c6990153a36c4fdaffb",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "HBox(children=(FloatProgress(value=0.0, description='Dl Completed...', max=4.0, style=ProgressStyle(descriptio…"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1mDataset mnist downloaded and prepared to /root/tensorflow_datasets/mnist/3.0.0. Subsequent calls will reuse this data.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jzmsi_9rD4lC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def build_model():\n",
+        "  model = tf.keras.models.Sequential()\n",
+        "  model.add(tf.keras.layers.Lambda(lambda x: tf.reshape(x, [x.shape[0], x.shape[1]*x.shape[2]])))\n",
+        "  model.add(tf.keras.layers.Lambda(lambda x: x/255))\n",
+        "  model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
+        "  model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
+        "  model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
+        "\n",
+        "  model.compile(loss='categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])\n",
+        "\n",
+        "  return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_WS9LXknD7xt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 737
+        },
+        "outputId": "a91794f9-b377-4760-998a-2ce4cd70ae60"
+      },
+      "source": [
+        "model = build_model()\n",
+        "model.fit(X_train, y_train, epochs=20)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.8885 - accuracy: 0.7535\n",
+            "Epoch 2/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.3583 - accuracy: 0.8971\n",
+            "Epoch 3/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.3002 - accuracy: 0.9140\n",
+            "Epoch 4/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2663 - accuracy: 0.9239\n",
+            "Epoch 5/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2417 - accuracy: 0.9306\n",
+            "Epoch 6/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2211 - accuracy: 0.9370\n",
+            "Epoch 7/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.2051 - accuracy: 0.9415\n",
+            "Epoch 8/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1912 - accuracy: 0.9459\n",
+            "Epoch 9/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1800 - accuracy: 0.9485\n",
+            "Epoch 10/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1699 - accuracy: 0.9514\n",
+            "Epoch 11/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1608 - accuracy: 0.9544\n",
+            "Epoch 12/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1535 - accuracy: 0.9562\n",
+            "Epoch 13/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1471 - accuracy: 0.9577\n",
+            "Epoch 14/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1403 - accuracy: 0.9592\n",
+            "Epoch 15/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1349 - accuracy: 0.9606\n",
+            "Epoch 16/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1299 - accuracy: 0.9622\n",
+            "Epoch 17/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1250 - accuracy: 0.9644\n",
+            "Epoch 18/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1208 - accuracy: 0.9646\n",
+            "Epoch 19/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1165 - accuracy: 0.9662\n",
+            "Epoch 20/20\n",
+            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.1124 - accuracy: 0.9673\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f0ff913d8d0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ymxgTznwEHzz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "d018f1e4-c318-4e6e-8473-7dd23abc507b"
+      },
+      "source": [
+        "model.evaluate(X_test, y_test)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "375/375 [==============================] - 0s 1ms/step - loss: 0.1550 - accuracy: 0.9562\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.15500508248806, 0.956166684627533]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yaa977ULEVaB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.save(\"model_mnist.h5\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M0hrcIfbEYfM",
         "colab_type": "code",
         "colab": {}
       },
