--- a/1 - Le Basi di Tensorflow/tf_equation.ipynb
+++ b/1 - Le Basi di Tensorflow/tf_equation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tf_equation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDCTvwXrHXo7zFeWHHJncq",
+      "authorship_tag": "ABX9TyMtp8z1wm9HASoLaNm6W1PH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,18 @@
         "colab_type": "text"
       },
       "source": [
-        "# Approssimare un'equazione"
+        "# Approssimare un'equazione\n",
+        "In questo notebook utilizzeremo Tensorlfow per realizzare il più semplice dei modelli di Machine Learning, quello che ci permette di approssimare una semplice funzione lineare."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_vLbZhCabxN1",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
       ]
     },
     {
@@ -52,11 +63,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IwFvG2-ofGTC",
+        "id": "1mCL7lKGb0dt",
         "colab_type": "text"
       },
       "source": [
-        "$$ y = 2x + 1 $$"
+        "## Creiamo il Dataset\n",
+        "La funzione che proveremo ad approssimare avrà questa forma: \n",
+        "$$ y = ax + b $$\n",
+        "nel nostro caso sarà a=2 e b=1, quindi la funzione è:\n",
+        "$$ y = 2x + 1 $$\n",
+        "per farlo abbiamo bisogno di una serie di valori per la x e i corrispondenti valori per la y, inseriamoli all'interno di due array numpy."
       ]
     },
     {
@@ -74,6 +90,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-mV8w5PLcNXx",
+        "colab_type": "text"
+      },
+      "source": [
+        "questi due array corrispondono rispettivamente a features e target del nostro modello."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ywThcR6GcjsE",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo il Modello\n",
+        "Per creare una nuova Rete Neurale possiamo utilizzare la classe Sequential di Tensorflow che accetta in input i vari strati che compongono la Rete. Per questo esercizio dobbiamo addestrare un semplice modello di regressione lineare, quindi sarà sufficente aggiungere un unico strato utilizzando la classe Dense."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7h0JbCotfxGG",
@@ -85,6 +122,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7YgoFhgTdJN6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Dopo aver definito il modello dobbiamo configurarlo per la fase di addestramento, possiamo farlo utilizzando il metodo compile."
+      ]
     },
     {
       "cell_type": "code",
@@ -100,6 +147,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x9V1tjcLdWww",
+        "colab_type": "text"
+      },
+      "source": [
+        "Infine possiamo avviare l'addestramento con il metodo fit, passando features e target e specificando il numero di epoche."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "J7t9AT8TgXT7",
@@ -113,7 +170,7 @@
       "source": [
         "model.fit(x, y, epochs=500)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,6 +1193,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n-9oW399diZF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Abbiamo addestrato il nostro modello di Machine Learning, che contiene al suo interno la funzione approssimata, possiamo utilizzarla utilizzando il metodo *predict*."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rDErJK33gcLV",
@@ -1150,7 +1217,7 @@
         "y_pred = model.predict([2])\n",
         "print(y_pred)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,6 +1226,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_Yn0AuEPdwMD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Come vedi il metodo *predict* accetta in input una lista (o un array), infatti è possibile stimare più valori di y, utilizzando più x, con un'unica chiamata al metodo."
       ]
     },
     {
@@ -1176,7 +1253,7 @@
         "y_pred = model.predict([2, -2, 21, 12, -37])\n",
         "print(y_pred)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,20 +1269,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dcR9iD7ReGeb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Come vedi i valori che otteniamo non sono molto distanti a quelli che otterremo utilizzando la funzione definita sopra, questo vuol dire che siamo riusciti ad approssimarla abbastanza bene. Per vedere i valori di a (peso) e b (bias) che la funzione ha appreso possiamo usare l'attributo weights."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GxU8MLIi9awQ",
         "colab_type": "code",
+        "outputId": "24d44289-59f4-47e5-ae8e-923e79c1a0f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "24d44289-59f4-47e5-ae8e-923e79c1a0f8"
+        }
       },
       "source": [
         "model.weights"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1220,6 +1307,18 @@
           },
           "execution_count": 8
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sprdyxSAeoG3",
+        "colab_type": "text"
+      },
+      "source": [
+        "La funzione che il modello ha appreso è la seguente:\n",
+        "$$y = 1.97x + 1.38$$\n",
+        "abbastanza vicina a quella di partenza :)"
       ]
     }
   ]
