--- a/1 - Le Basi di Tensorflow/classe_di_matematica.ipynb
+++ b/1 - Le Basi di Tensorflow/classe_di_matematica.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled43.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSui8M7Pq1TUp8pQE6F6k/",
+      "authorship_tag": "ABX9TyNJvEDrz0yzNk5BSe3v4El5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,20 @@
         "colab_type": "text"
       },
       "source": [
-        "# Un'esempio di Classificazione"
+        "# Chi passerà matematica ?\n",
+        "La classificazione è il problema in cui cerchiamo di approssimare una funzione il cui output è una classe, cioè un valore appartenente ad un set di valori finiti.\n",
+        "Per approcciarci alla classificazione, in questo notebook addestreremo un modello di machine learning per predire quali studenti passeranno la classe di matematica, quindi i possibili output del modello sono solamente 2: promosso o bocciato."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jz_rnk_5ymNK",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli\n",
+        "Per scaricare ed operare sul dataset utilizzeremo il modulo Pandas."
       ]
     },
     {
@@ -52,6 +65,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zWGl7RKGytf0",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo il Dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I7qz3lufywIr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utilizziamo Pandas per caricare il file csv contenente le informazioni sugli studenti direttamente dentro un DataFrame, un'oggetto che Pandas utilizza per rappresentare dati in forma tabulare."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HqMMKIcIOvyG",
@@ -64,10 +97,10 @@
       },
       "source": [
         "csv_url = \"https://raw.githubusercontent.com/ProfAI/tf00/master/datasets/math_class/math_class.csv\"\n",
-        "df = pd.read_csv(csv_url)\n",
-        "df.head()"
+        "df = pd.read_csv(csv_url) # carichiamo il csv in un DataFrame\n",
+        "df.head() # stampiamo le prime 5 righe"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,6 +193,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5HbWGf4AzAZh",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ogni riga rappresenta uno studente e ogni colonna una determinata informazione. Le informazioni che abbiamo a disposizione sono le seguenti:\n",
+        "* **student_id**: codice identificativo dello studente.\n",
+        "* **studytime**: ore di studio al giorno.\n",
+        "* **failures**: numero di volte che lo studene è stato rimandato in matematica in passato.\n",
+        "* **absences**: ore di assenze nella classe di matematica per il quadrimestre corrente.\n",
+        "* **promoted**: variabile booleana (True=1,False=0) che indica se lo studente è stato promosso.\n",
+        "\n",
+        "**promoted** è l'informazione che dobbiamo predire, quindi il target dentro modello, mentre utilizzeremo le altre colonne come features, ad eccezione di **student_id**, la quale non contiene alcuna informazione utile ai fini della classificazione.\n",
+        "<br>\n",
+        "Otteniamo i corrispondenti array numpy, per features e target, dal DataFrame."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "60nNdvl_Q84Y",
@@ -172,6 +224,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vRMjmsHC0XBW",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo il Modello\n",
+        "Addestriamo il modello, per eseguire la classificazione dobbiamo definire una *funzione di attivazione*, che per problemi di classificazione binaria (cioè tra due classi) è la sigmoide."
+      ]
     },
     {
       "cell_type": "code",
@@ -189,6 +252,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NokXzjAi0r2_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utilizziamo la **Binary Crossentropy (o Log Loss)** come funzione di costo, la quale tiene conto della probabilità di quanto le predizione del modello siano corrette, e aggiungiamo **l'Accuracy** come metrica, che indica semplicemente la percentuale di classficazioni che il modello ha eseguito correttamente."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1JgLMl2ySLMB",
@@ -200,6 +273,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FL0rAi6Z1Apj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Avviamo l'addestramento per 100 epoche."
+      ]
     },
     {
       "cell_type": "code",
@@ -215,7 +298,7 @@
       "source": [
         "model.fit(X, y, epochs=100)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,6 +521,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wA4_j-jU1DKD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Il valore della Binary Crossentropy (o Log Loss) all'ultima epoca è 0.5986, che è discreto ma non eccellente, risultato rispecchiato anche dall'accuracy: 0.719, questo vuol dire che il modello ha classificato correttamente il 72% degli esempi del set di addestramento."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iMwGpRHZ1iwO",
+        "colab_type": "text"
+      },
+      "source": [
+        "## I miei figli verranno bocciati ?\n",
+        "Ora che abbiamo un modello discreto addestrato, utilizziamolo per cercare di sapere preventivamente se i miei 3 figli verranno bocciato, questi sono i loro dati:\n",
+        "* **Alex**: non studia per niente, è già stato rimandato in matematica 3 volte e questo trimestre ha già fatto 10 assenze.\n",
+        "* **Albert**: studia 6 ore al giorno, non è mai stato rimandato ed ha fatto solo 2 assenze.\n",
+        "* **Galileo**: studia 2 ore al giorno, in passato è stato rimandato una volta e questo trimestre ha fatto 5 assenze."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9ckz6ortSfgd",
@@ -452,7 +559,7 @@
         "X_test = [[0, 3, 10], [6, 0, 2], [2, 1, 5]]\n",
         "model.predict(X_test)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,6 +578,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XOVlmzx72efg",
+        "colab_type": "text"
+      },
+      "source": [
+        "In caso di classificazione, utilizzando la sigmoide come funzione di attivazione, il metodo *predict* ritorna la probabilità di apperteneza alla classe positiva, in questo caso la probabilità che l'utente venga promosso in matematica. I nostri risultati sono i seguenti:\n",
+        "* **Alex**: 18.7% di probabilità di venire promosso.\n",
+        "* **Albert**: 91% di probabilità di venire promosso.\n",
+        "* **Galileo**: 58.2% di probabilità di venire promosso."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hdCJy6Bs3lhq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Se piuttosto che la probabilità vogliamo ottenere direttamente la classe di appartenenza (1=classe positiva=promosso, 0=classe negativa=bocciato), possiamo usare il metodo *predict_classes*."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6lfz5uMnS7wT",
@@ -484,7 +614,7 @@
       "source": [
         "model.predict_classes(X_test)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,6 +642,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xtUdGPAE31GC",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Qual è la \"Formula della Promozione\" ?\n",
+        "Anche in questo caso possiamo estrarre dal modello pesi e bias e ricostruire la relazione tra features e target."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "g9-ft4cIS_X5",
@@ -525,7 +666,7 @@
       "source": [
         "model.weights"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,6 +684,16 @@
           },
           "execution_count": 18
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zemIlEA94AmF",
+        "colab_type": "text"
+      },
+      "source": [
+        "$$y=0.36x_1-\\frac{x_2}{2}-0.018x_3+\\frac{1}{5}$$"
       ]
     }
   ]
